--- a/2024-10-31_AJMC_article.ipynb
+++ b/2024-10-31_AJMC_article.ipynb
@@ -105,7 +105,16 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: us in /local_disk0/.ephemeral_nfs/envs/pythonEnv-91b24a0c-88cb-4411-b121-1e207a73c854/lib/python3.10/site-packages (3.2.0)\nRequirement already satisfied: jellyfish in /local_disk0/.ephemeral_nfs/envs/pythonEnv-91b24a0c-88cb-4411-b121-1e207a73c854/lib/python3.10/site-packages (from us) (1.1.0)\n\u001B[43mNote: you may need to restart the kernel using %restart_python or dbutils.library.restartPython() to use updated packages.\u001B[0m\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install us"
    ]
@@ -246,6 +255,232 @@
     }
    },
    "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/html": [
+       "<style scoped>\n",
+       "  .table-result-container {\n",
+       "    max-height: 300px;\n",
+       "    overflow: auto;\n",
+       "  }\n",
+       "  table, th, td {\n",
+       "    border: 1px solid black;\n",
+       "    border-collapse: collapse;\n",
+       "  }\n",
+       "  th, td {\n",
+       "    padding: 5px;\n",
+       "  }\n",
+       "  th {\n",
+       "    text-align: left;\n",
+       "  }\n",
+       "</style><div class='table-result-container'><table class='table-result'><thead style='background-color: white'><tr><th>plan_type</th><th>cw_status</th><th>count</th></tr></thead><tbody><tr><td>Local PPO</td><td>Renewal Plan</td><td>9832134</td></tr><tr><td>Medicare-Medicaid Plan HMO/HMOPOS</td><td>Renewal Plan</td><td>242232</td></tr><tr><td>PFFS</td><td>Renewal Plan with SAR</td><td>15562</td></tr><tr><td>HMO/HMOPOS</td><td>Terminated/Non-renewed Contract</td><td>468425</td></tr><tr><td>Employer/Union Only Direct Contract PDP</td><td>Renewal Plan</td><td>94481</td></tr><tr><td>Medicare Prescription Drug Plan</td><td>Terminated/Non-renewed Contract</td><td>223931</td></tr><tr><td>1876 Cost</td><td>Consolidated Renewal Plan</td><td>2865</td></tr><tr><td>HMO/HMOPOS</td><td>Consolidated Renewal Plan</td><td>1895699</td></tr><tr><td>Medicare-Medicaid Plan HMO/HMOPOS</td><td>Terminated/Non-renewed Contract</td><td>4495</td></tr><tr><td>1876 Cost</td><td>Renewal Plan with SAR</td><td>48748</td></tr><tr><td>Medicare Prescription Drug Plan</td><td>Consolidated Renewal Plan</td><td>5674892</td></tr><tr><td>Regional PPO</td><td>Terminated/Non-renewed Contract</td><td>88684</td></tr><tr><td>Local PPO</td><td>Terminated/Non-renewed Contract</td><td>811147</td></tr><tr><td>HMO/HMOPOS</td><td>Renewal Plan</td><td>13262247</td></tr><tr><td>Regional PPO</td><td>Renewal Plan</td><td>240441</td></tr><tr><td>HMO/HMOPOS</td><td>Renewal Plan with SAR</td><td>1609855</td></tr><tr><td>Local PPO</td><td>Consolidated Renewal Plan</td><td>498046</td></tr><tr><td>1876 Cost</td><td>Renewal Plan</td><td>114364</td></tr><tr><td>HMO/HMOPOS</td><td>Renewal Plan with SAE</td><td>1665384</td></tr><tr><td>Medicare Prescription Drug Plan</td><td>Renewal Plan</td><td>16725277</td></tr><tr><td>PFFS</td><td>Renewal Plan</td><td>7650</td></tr><tr><td>Local PPO</td><td>Renewal Plan with SAE</td><td>391482</td></tr><tr><td>National PACE</td><td>Consolidated Renewal Plan</td><td>194</td></tr><tr><td>1876 Cost</td><td>Terminated/Non-renewed Contract</td><td>186</td></tr><tr><td>Medicare-Medicaid Plan HMO/HMOPOS</td><td>Renewal Plan with SAR</td><td>4811</td></tr><tr><td>MSA</td><td>Renewal Plan</td><td>907</td></tr><tr><td>Local PPO</td><td>Renewal Plan with SAR</td><td>2877431</td></tr><tr><td>National PACE</td><td>Renewal Plan</td><td>62439</td></tr><tr><td>PFFS</td><td>Renewal Plan with SAE</td><td>99</td></tr><tr><td>Medicare Prescription Drug Plan</td><td>Renewal Plan with SAE</td><td>99335</td></tr><tr><td>PFFS</td><td>Terminated/Non-renewed Contract</td><td>5247</td></tr></tbody></table></div>"
+      ]
+     },
+     "metadata": {
+      "application/vnd.databricks.v1+output": {
+       "addedWidgets": {},
+       "aggData": [],
+       "aggError": "",
+       "aggOverflow": false,
+       "aggSchema": [],
+       "aggSeriesLimitReached": false,
+       "aggType": "",
+       "arguments": {},
+       "columnCustomDisplayInfos": {},
+       "data": [
+        [
+         "Local PPO",
+         "Renewal Plan",
+         9832134
+        ],
+        [
+         "Medicare-Medicaid Plan HMO/HMOPOS",
+         "Renewal Plan",
+         242232
+        ],
+        [
+         "PFFS",
+         "Renewal Plan with SAR",
+         15562
+        ],
+        [
+         "HMO/HMOPOS",
+         "Terminated/Non-renewed Contract",
+         468425
+        ],
+        [
+         "Employer/Union Only Direct Contract PDP",
+         "Renewal Plan",
+         94481
+        ],
+        [
+         "Medicare Prescription Drug Plan",
+         "Terminated/Non-renewed Contract",
+         223931
+        ],
+        [
+         "1876 Cost",
+         "Consolidated Renewal Plan",
+         2865
+        ],
+        [
+         "HMO/HMOPOS",
+         "Consolidated Renewal Plan",
+         1895699
+        ],
+        [
+         "Medicare-Medicaid Plan HMO/HMOPOS",
+         "Terminated/Non-renewed Contract",
+         4495
+        ],
+        [
+         "1876 Cost",
+         "Renewal Plan with SAR",
+         48748
+        ],
+        [
+         "Medicare Prescription Drug Plan",
+         "Consolidated Renewal Plan",
+         5674892
+        ],
+        [
+         "Regional PPO",
+         "Terminated/Non-renewed Contract",
+         88684
+        ],
+        [
+         "Local PPO",
+         "Terminated/Non-renewed Contract",
+         811147
+        ],
+        [
+         "HMO/HMOPOS",
+         "Renewal Plan",
+         13262247
+        ],
+        [
+         "Regional PPO",
+         "Renewal Plan",
+         240441
+        ],
+        [
+         "HMO/HMOPOS",
+         "Renewal Plan with SAR",
+         1609855
+        ],
+        [
+         "Local PPO",
+         "Consolidated Renewal Plan",
+         498046
+        ],
+        [
+         "1876 Cost",
+         "Renewal Plan",
+         114364
+        ],
+        [
+         "HMO/HMOPOS",
+         "Renewal Plan with SAE",
+         1665384
+        ],
+        [
+         "Medicare Prescription Drug Plan",
+         "Renewal Plan",
+         16725277
+        ],
+        [
+         "PFFS",
+         "Renewal Plan",
+         7650
+        ],
+        [
+         "Local PPO",
+         "Renewal Plan with SAE",
+         391482
+        ],
+        [
+         "National PACE",
+         "Consolidated Renewal Plan",
+         194
+        ],
+        [
+         "1876 Cost",
+         "Terminated/Non-renewed Contract",
+         186
+        ],
+        [
+         "Medicare-Medicaid Plan HMO/HMOPOS",
+         "Renewal Plan with SAR",
+         4811
+        ],
+        [
+         "MSA",
+         "Renewal Plan",
+         907
+        ],
+        [
+         "Local PPO",
+         "Renewal Plan with SAR",
+         2877431
+        ],
+        [
+         "National PACE",
+         "Renewal Plan",
+         62439
+        ],
+        [
+         "PFFS",
+         "Renewal Plan with SAE",
+         99
+        ],
+        [
+         "Medicare Prescription Drug Plan",
+         "Renewal Plan with SAE",
+         99335
+        ],
+        [
+         "PFFS",
+         "Terminated/Non-renewed Contract",
+         5247
+        ]
+       ],
+       "datasetInfos": [],
+       "dbfsResultPath": null,
+       "isJsonSchema": true,
+       "metadata": {},
+       "overflow": false,
+       "plotOptions": {
+        "customPlotOptions": {},
+        "displayType": "table",
+        "pivotAggregation": null,
+        "pivotColumns": null,
+        "xColumns": null,
+        "yColumns": null
+       },
+       "removedWidgets": [],
+       "schema": [
+        {
+         "metadata": "{\"comment\": \"Type of Medicare Advantage plan\"}",
+         "name": "plan_type",
+         "type": "\"string\""
+        },
+        {
+         "metadata": "{}",
+         "name": "cw_status",
+         "type": "\"string\""
+        },
+        {
+         "metadata": "{}",
+         "name": "count",
+         "type": "\"long\""
+        }
+       ],
+       "type": "table"
+      }
+     },
+     "output_type": "display_data"
+    },
     {
      "output_type": "display_data",
      "data": {
@@ -425,7 +660,7 @@
        "useConsistentColors": false,
        "version": "CommandV1",
        "width": "auto",
-       "workflows": null,
+       "workflows": [],
        "xColumns": null,
        "yColumns": null
       }
@@ -596,7 +831,16 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------------------------------+---------------------------------------+---------------+\n|(sum(wt_dd_diff_max) / sum(enrollment))|(sum(wt_dd_diff_min) / sum(enrollment))|sum(enrollment)|\n+---------------------------------------+---------------------------------------+---------------+\n|                      88.83752447988954|                      73.03640082674919|       57705530|\n+---------------------------------------+---------------------------------------+---------------+\n\n+---------------------------------------+---------------------------------------+---------------+\n|(sum(wt_dd_diff_max) / sum(enrollment))|(sum(wt_dd_diff_min) / sum(enrollment))|sum(enrollment)|\n+---------------------------------------+---------------------------------------+---------------+\n|                     114.01744340926408|                      91.26373020255076|       34982095|\n+---------------------------------------+---------------------------------------+---------------+\n\n+---------------------------------------+---------------------------------------+---------------+\n|(sum(wt_dd_diff_max) / sum(enrollment))|(sum(wt_dd_diff_min) / sum(enrollment))|sum(enrollment)|\n+---------------------------------------+---------------------------------------+---------------+\n|                     189.76933962887597|                     168.13346449928284|       18914970|\n+---------------------------------------+---------------------------------------+---------------+\n\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate average deductible changes across all plans\n",
     "# Range represents min/max possible changes based on regional bounds\n",
