--- a/2024-10-31_AJMC_article.ipynb
+++ b/2024-10-31_AJMC_article.ipynb
@@ -897,6 +897,7 @@
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
    "dashboards": [],
    "environmentMetadata": {
     "base_environment": "",
