--- a/2024-10-31_AJMC_article.ipynb
+++ b/2024-10-31_AJMC_article.ipynb
@@ -903,6 +903,7 @@
     "base_environment": "",
     "environment_version": "1"
    },
+   "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
     "pythonIndentUnit": 4
